k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starship-registry-service
spec:
  selector:
    app: starship-registry
  ports:
  - port: 80
    targetPort: 8080
