k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starship-registry-ingress
  labels:
    name: starship-registry
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/cxp-team-starfleet/starship-registry"
        backend:
          service:
            name: starfleet-registry-service
            port:
              number: 80
